--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=CartService
+server.port=${SERVERPORT:3000}
+spring.datasource.url=jdbc:mysql://:localhost:3306/cartService
+spring.datasource.username=${DB_USERNAME:cartServiceUser}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
