--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,31 @@
+# Application Identity
 spring.application.name=CartService
 server.port=${SERVERPORT:3000}
-spring.datasource.url=jdbc:mysql://:localhost:3306/cartService
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/cartService
 spring.datasource.username=${DB_USERNAME:cartServiceUser}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# Eureka Client Configuration
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.prefer-ip-address=true
+eureka.instance.hostname=localhost
+
+# OAuth2 Client (for outgoing calls)
+spring.security.oauth2.client.registration.my-client.client-id=jay-client
+spring.security.oauth2.client.registration.my-client.client-secret=secretPassword
+spring.security.oauth2.client.registration.my-client.authorization-grant-type=client_credentials
+spring.security.oauth2.client.registration.my-client.scope=ADMIN
+spring.security.oauth2.client.provider.my-client.token-uri=http://localhost:9080/oauth2/token
+
+# JWT Resource Server (for incoming requests)
+# Validate JWTs via the API Gateway for service discovery and HA
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:5000/.well-known/jwks.json
+
+
