Successful connection between Cart and ProductMS

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Application Identity
 spring.application.name=CartService
-server.port=${SERVERPORT:3000}
+server.port=${SERVER-PORT:3000}
 
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/cartService
@@ -24,8 +24,10 @@ spring.security.oauth2.client.registration.my-client.authorization-grant-type=cl
 spring.security.oauth2.client.registration.my-client.scope=ADMIN
 spring.security.oauth2.client.provider.my-client.token-uri=http://localhost:9080/oauth2/token
 
+
 # JWT Resource Server (for incoming requests)
 # Validate JWTs via the API Gateway for service discovery and HA
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:5000/.well-known/jwks.json
+
 
 
